# hello_agentic_world

./: .gitignore  Makefile  README.md  STAGE.md  pyproject.toml
.github/workflows/: pages.yml
docs/: BRANCH_WORKFLOW.md  CURRICULUM.md  EVALUATION.md  REPOSITORY_STRUCTURE.md  book.toml
docs/contracts/: agent-loop.md  completion.md  tool-protocol.md
docs/replay/: replay.css  replay.js
docs/src/: SUMMARY.md  introduction.md  replay.md  repository-history.md
docs/src/replay/: manifest.json
docs/src/replay/runs/: completed_20260717T074219.430456Z.json  completed_20260717T074947.873651Z.json  completed_20260717T075556.138766Z.json  failed_20260718T031629.415482Z.json  failed_20260718T044629.270973Z.json
docs/src/stage-1/: agent-loop.md  cli-foundation.md  dispatcher-observations.md  evaluation.md  filesystem-tools.md  framing.md  model-integration.md  overview.md  refactor-v1-5.md  verification-traces.md
docs/src/stage-2/: overview.md
docs/src/stage-3/: overview.md
docs/src/stage-4/: overview.md
docs/src/stage-5/: overview.md
docs/stages/: 01-hello-agent.md  02-file-detective.md  03-self-correcting.md  04-persistent.md  05-governed.md
evals/: run.py
src/hello_agentic_world/: __init__.py  agent.py  cli.py  contracts.py  debug.py  dispatcher.py  model.py  observations.py  scripted.py  task_state.py  tools.py  traces.py  verification.py
tests/: conftest.py  test_agent.py  test_cli.py  test_dispatcher.py  test_evals_run.py  test_model.py  test_tools.py  test_verification.py  trace_test.py
