[project]
name = "hello-agentic-world"
version = "0.1.0"
description = "Learn agentic software by building one bounded agent loop"
requires-python = ">=3.12"
dependencies = ["ollama>=0.6.2,<0.7"]

[dependency-groups]
dev = ["pytest>=8.0,<9"]

[project.scripts]
hello-agent = "hello_agentic_world.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_agentic_world"]

[tool.pytest.ini_options]
testpaths = ["tests"]
